# ASTeroid

./: CMakeLists.txt  README.md  asteroid.cpp  asteroid_test.cpp
include/: asteroid.h
src/: asteroid.cpp
